--- a/.github/workflows/ci-java-maven.yml
+++ b/.github/workflows/ci-java-maven.yml
@@ -24,10 +24,23 @@ jobs:
           java-version: '17'
           cache: maven
 
+      - name: Check for Java project
+        id: check_project
+        run: |
+          if [ -f "pom.xml" ]; then
+            echo "has_java_project=true" >> $GITHUB_OUTPUT
+            echo "✓ Java project found (pom.xml)"
+          else
+            echo "has_java_project=false" >> $GITHUB_OUTPUT
+            echo "⚠ No Java project found - skipping Maven build"
+          fi
+
       - name: Maven build & test
+        if: steps.check_project.outputs.has_java_project == 'true'
         run: mvn -B clean verify
 
       - name: Login to GitHub Container Registry
+        if: steps.check_project.outputs.has_java_project == 'true'
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -35,6 +48,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
+        if: steps.check_project.outputs.has_java_project == 'true'
         uses: docker/build-push-action@v4
         with:
           context: ./services/marketplace-service
