--- a/.github/workflows/jira-automation.yml
+++ b/.github/workflows/jira-automation.yml
@@ -8,6 +8,10 @@ on:
   issues:
     types: [opened, labeled]
 
+permissions:
+  pull-requests: write
+  contents: read
+
 env:
   JIRA_DOMAIN: designercompk
   JIRA_PROJECT: KAN
@@ -115,21 +119,27 @@ jobs:
     steps:
       - name: Update PR with Jira link
         uses: actions/github-script@v7
+        continue-on-error: true
         with:
           script: |
-            const ticket = '${{ needs.extract-ticket.outputs.ticket_key }}';
-            const jiraLink = `https://designercompk.atlassian.net/browse/${ticket}`;
-            const body = context.payload.pull_request.body || '';
-            
-            if (!body.includes(jiraLink)) {
-              const newBody = `${body}\n\n---\n**Jira Ticket:** [${ticket}](${jiraLink})`;
-              github.rest.pulls.update({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                pull_number: context.issue.number,
-                body: newBody
-              });
-              console.log(`✓ Added Jira link to PR: ${jiraLink}`);
+            try {
+              const ticket = '${{ needs.extract-ticket.outputs.ticket_key }}';
+              const jiraLink = `https://designercompk.atlassian.net/browse/${ticket}`;
+              const body = context.payload.pull_request.body || '';
+              
+              if (!body.includes(jiraLink)) {
+                const newBody = `${body}\n\n---\n**Jira Ticket:** [${ticket}](${jiraLink})`;
+                await github.rest.pulls.update({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  pull_number: context.issue.number,
+                  body: newBody
+                });
+                console.log(`✓ Added Jira link to PR: ${jiraLink}`);
+              }
+            } catch (error) {
+              console.log(`⚠ Could not update PR (may lack permissions): ${error.message}`);
+              console.log(`ℹ Jira Link: https://designercompk.atlassian.net/browse/${{ needs.extract-ticket.outputs.ticket_key }}`);
             }
 
   post-merge-comment:
