--- a/.github/workflows/publish-java-ghcr.yml
+++ b/.github/workflows/publish-java-ghcr.yml
@@ -30,10 +30,34 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
+      - name: Check for Java project
+        id: check_project
+        run: |
+          if [ -f "pom.xml" ]; then
+            echo "has_java_project=true" >> $GITHUB_OUTPUT
+            echo "✓ Java project found (pom.xml)"
+          else
+            echo "has_java_project=false" >> $GITHUB_OUTPUT
+            echo "⚠ No Java project found - skipping Maven build"
+          fi
+
       - name: Build JAR (Maven)
+        if: steps.check_project.outputs.has_java_project == 'true'
         run: mvn -B -DskipTests package
 
+      - name: Check for Dockerfile
+        id: check_dockerfile
+        run: |
+          if [ -f "Dockerfile" ]; then
+            echo "has_dockerfile=true" >> $GITHUB_OUTPUT
+            echo "✓ Dockerfile found"
+          else
+            echo "has_dockerfile=false" >> $GITHUB_OUTPUT
+            echo "⚠ No Dockerfile found - skipping Docker build"
+          fi
+
       - name: Log in to GitHub Container Registry
+        if: steps.check_dockerfile.outputs.has_dockerfile == 'true'
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -41,6 +65,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push Docker image
+        if: steps.check_dockerfile.outputs.has_dockerfile == 'true'
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -49,5 +74,12 @@ jobs:
           tags: ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest
 
       - name: Verify image in GHCR
+        if: steps.check_dockerfile.outputs.has_dockerfile == 'true'
         run: |
           echo "Image pushed to ghcr.io/${{ github.repository_owner }}/${{ github.event.repository.name }}:latest"
+
+      - name: Summary
+        run: |
+          echo "📊 CI/CD Summary"
+          echo "Java Project: ${{ steps.check_project.outputs.has_java_project }}"
+          echo "Dockerfile: ${{ steps.check_dockerfile.outputs.has_dockerfile }}"
