--- a/.github/workflows/ci-java-maven.yml
+++ b/.github/workflows/ci-java-maven.yml
@@ -17,13 +17,6 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          distribution: temurin
-          java-version: '17'
-          cache: maven
-
       - name: Check for Java project
         id: check_project
         run: |
@@ -34,6 +27,14 @@ jobs:
             echo "has_java_project=false" >> $GITHUB_OUTPUT
             echo "⚠ No Java project found - skipping Maven build"
           fi
+
+      - name: Set up JDK 17
+        if: steps.check_project.outputs.has_java_project == 'true'
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: '17'
+          cache: maven
 
       - name: Maven build & test
         if: steps.check_project.outputs.has_java_project == 'true'
