Fix: Remove error suppression in gh pr view command

--- a/.github/workflows/jira-automation.yml
+++ b/.github/workflows/jira-automation.yml
@@ -61,7 +61,7 @@ jobs:
             elif [[ $COMMIT_MSG =~ \(#([0-9]+)\) ]]; then
               PR_NUM="${BASH_REMATCH[1]}"
               echo "Found PR #$PR_NUM, fetching branch name..."
-              PR_BRANCH=$(gh pr view $PR_NUM --json headRefName --jq '.headRefName' 2>/dev/null || echo "")
+              PR_BRANCH=$(gh pr view $PR_NUM --json headRefName --jq '.headRefName')
               echo "PR branch: $PR_BRANCH"
               if [[ $PR_BRANCH =~ (KAN-[0-9]+) ]]; then
                 TICKET="${BASH_REMATCH[1]}"
