Add integration tests for Designer Marketplace API covering user workflows

--- a/services/marketplace-service/pom.xml
+++ b/services/marketplace-service/pom.xml
@@ -109,6 +109,12 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- AOP for logging and monitoring -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
         <!-- OpenAPI/Swagger -->
         <dependency>
             <groupId>org.springdoc</groupId>
