--- a/.github/workflows/ci-cd-enhanced.yml
+++ b/.github/workflows/ci-cd-enhanced.yml
@@ -51,6 +51,9 @@ jobs:
           cache: 'npm'
           cache-dependency-path: 'frontend/marketplace-web/package-lock.json'
 
+      - name: Update npm
+        run: npm install -g npm@latest
+
       - name: 📝 Frontend Lint
         working-directory: ./frontend/marketplace-web
         run: |
@@ -101,6 +104,9 @@ jobs:
           node-version: '18'
           cache: 'npm'
           cache-dependency-path: 'frontend/marketplace-web/package-lock.json'
+
+      - name: Update npm
+        run: npm install -g npm@latest
 
       - name: 🧪 Frontend Unit Tests
         working-directory: ./frontend/marketplace-web
@@ -189,6 +195,9 @@ jobs:
           node-version: '18'
           cache: 'npm'
           cache-dependency-path: 'frontend/marketplace-web/package-lock.json'
+
+      - name: Update npm
+        run: npm install -g npm@latest
 
       # Setup Java for backend
       - name: Set up JDK 21
