--- a/frontend/marketplace-web/package.json
+++ b/frontend/marketplace-web/package.json
@@ -12,9 +12,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "next": "14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^15.1.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "axios": "^1.6.2",
     "@tanstack/react-query": "^5.14.2",
     "zustand": "^4.4.7",
@@ -25,14 +25,14 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.6",
-    "@types/react": "^18.2.46",
-    "@types/react-dom": "^18.2.18",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
     "typescript": "^5.3.3",
     "tailwindcss": "^3.4.0",
     "postcss": "^8.4.32",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^15.1.3",
     "@testing-library/react": "^14.1.2",
     "@testing-library/jest-dom": "^6.1.5",
     "@types/jest": "^29.5.11",
