--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -31,7 +31,7 @@ jobs:
           cache-dependency-path: 'frontend/marketplace-web/package-lock.json'
 
       - name: Install dependencies
-        run: npm ci || npm install
+        run: npm install --legacy-peer-deps
 
       - name: Run linter
         run: npm run lint || echo "⚠️ Lint warnings present (non-blocking)"
