--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -15,9 +15,6 @@ jobs:
   frontend-tests:
     name: Frontend Build & Tests
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend/marketplace-web
     
     steps:
       - name: Checkout code
@@ -27,23 +24,29 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: 'frontend/marketplace-web/package-lock.json'
 
-      - name: Install dependencies
-        run: npm install --legacy-peer-deps
+      - name: Enable Corepack
+        run: corepack enable
+
+      - name: Install dependencies with Yarn
+        working-directory: ./frontend/marketplace-web
+        run: yarn install --legacy-peer-deps
 
       - name: Run linter
-        run: npm run lint || echo "⚠️ Lint warnings present (non-blocking)"
+        working-directory: ./frontend/marketplace-web
+        run: yarn lint || echo "⚠️ Lint warnings present (non-blocking)"
         continue-on-error: true
 
       - name: Run tests
-        run: npm test -- --passWithNoTests --coverage
+        working-directory: ./frontend/marketplace-web
+        run: yarn test -- --passWithNoTests --coverage
         continue-on-error: true
 
       - name: Build application
-        run: npm run build
+        working-directory: ./frontend/marketplace-web
+        run: yarn build
 
       - name: Type check
-        run: npm run type-check
+        working-directory: ./frontend/marketplace-web
+        run: yarn type-check
         continue-on-error: true
