--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -24,29 +24,28 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: 'frontend/marketplace-web/package-lock.json'
 
-      - name: Enable Corepack
-        run: corepack enable
-
-      - name: Install dependencies with Yarn
+      - name: Install dependencies
         working-directory: ./frontend/marketplace-web
-        run: yarn install --legacy-peer-deps
+        run: npm ci || npm install --legacy-peer-deps
 
       - name: Run linter
         working-directory: ./frontend/marketplace-web
-        run: yarn lint || echo "⚠️ Lint warnings present (non-blocking)"
+        run: npm run lint || echo "⚠️ Lint warnings present (non-blocking)"
         continue-on-error: true
 
       - name: Run tests
         working-directory: ./frontend/marketplace-web
-        run: yarn test -- --passWithNoTests --coverage
+        run: npm test -- --passWithNoTests --coverage
         continue-on-error: true
 
       - name: Build application
         working-directory: ./frontend/marketplace-web
-        run: yarn build
+        run: npm run build
 
       - name: Type check
         working-directory: ./frontend/marketplace-web
-        run: yarn type-check
+        run: npm run type-check
         continue-on-error: true
