--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install dependencies
         working-directory: ./frontend/marketplace-web
-        run: npm ci || npm install --legacy-peer-deps
+        run: npm install --legacy-peer-deps
 
       - name: Run linter
         working-directory: ./frontend/marketplace-web
